# pychess-variants

./: .deepsource.toml  .gitignore  .gitpod.yml  .oxfmtrc.json  .oxlintrc.json  .pre-commit-config.yaml  .travis.yml  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Fix typo  PLAN.md  Procfile  README.md  aioauth_client.py  bot_api.py  coffeerace.md  compress.py  cp2static.sh  docker-compose.yaml  donations.md  donatios.md  esbuild.mjs  export2pgn.sh  fairy.py  fishnet.py  gulpfile.js  install.sh  make-data-wheel.sh  md2html-mac.sh  md2html.js  md2html.sh  moonfish.py  mypy.ini  package.json  piece_image_to_css.py  pyproject.data.toml  pyproject.toml  pyrightconfig.json  (+22 more)
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  config.yml  dependabot.yml
.tx/: config
client/: 8queens.js  about.ts  alertDialog.ts  alice.ts  analysis.ts  analysisChart.ts  analysisClock.ts  analysisCtrl.ts  analysisCtrlAlice.ts  analysisSettings.ts  analysisTree.ts  analysisType.ts  analysisVariation.ts  antiCheat.ts  background.ts  board.ts  boardImage.ts  boardSettings.ts  botChallenge.ts  calendar.ts  cgCtrl.ts  challengeView.ts  chart.ts  chat.ts  chatSpam.ts  chess.ts  chessgroundxWithPockets.ts  clipboard.ts  clock.ts  communityVariants.ts  config.ts  confirmDialog.ts  count.ts  crosstable.ts  datetime.ts  directChallenge.ts  document.ts  duck.ts  editor.ts  editorCtrl.ts  (+93 more)
docker/: README.md  ci.Dockerfile  client.Dockerfile  server.Dockerfile
ffish-es6-duck/: ffish.d.ts  ffish.js  ffish.wasm  package.json
icomoon.io/: pychess-variants.json
lang/: babel_client.ini  babel_server.ini  client.pot  create_template.po.sh  init_po.sh  merge_po.sh  po2json.sh  server.pot
monitor/: monitor.css  monitor.py
pychess_data/: static
pychess_variants.egg-info/: PKG-INFO
scripts/: abort_anon_corr_games.py  backfill_user_count_stats.py  backfill_user_created_at_from_games.py  create_game_profile_indexes.py  extract_svg_drop_shadow.py  fix_dragonfly_castling_rights.py  gorogoro2plus.py  inspect_game_indexes.py  (+5 more)
(+2107 files in other folders)
