[project]
name = "pychess-variants"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp==3.12.15",
    "aiohttp-jinja2==1.6",
    "aiohttp-remotes==1.3.0",
    "aiohttp-session==2.12.1",
    "aiohttp-sse==2.2.0",
    "aiomonitor==0.7.1",
    "black==25.1.0",
    "brotli==1.1.0",
    "cryptography==45.0.7",
    "discord-py==2.6.3",
    "dnspython==2.8.0",
    "flake8==7.3.0",
    "jinja2==3.1.6",
    "minify-html==0.16.4",
    "mongomock-motor==0.0.36",
    "motor==3.7.1",
    "mypy==1.18.1",
    "objgraph==3.6.2",
    "pre-commit>=4.3.0",
    "pyffish==0.0.88",
    "pyffish-alice==0.0.2",
    "pymongo==4.14.1",
    "pyopenssl==25.2.0",
    "python-gettext==5.0",
    "rustworkx==0.17.1",
    "sortedcollections==2.1.0",
    "tzdata==2025.2",
]

[tool.black]
line-length = 100
