[project]
name = "pychess-variants"
version = "0.1.0"
description = "Chess variants server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp==3.13.2",
    "aiohttp-cors==0.8.1",
    "aiohttp-jinja2==1.6",
    "aiohttp-session==2.12.1",
    "aiohttp-sse==2.2.0",
    "brotli==1.2.0",
    "cryptography==46.0.3",
    "discord-py==2.6.4",
    "dnspython==2.8.0",
    "jinja2==3.1.6",
    "minify-html==0.18.1",
    "pyffish==0.0.88",
    "pyffish-alice==0.0.2",
    "pymongo==4.15.3",
    "pyopenssl==25.3.0",
    "python-gettext==5.0",
    "rustworkx==0.17.1",
    "sortedcollections==2.1.0",
    "tzdata==2025.2",
]

[project.optional-dependencies]
dev = [
    "black==25.11.0",
    "flake8==7.3.0",
    "mongomock-motor==0.0.36",
    "motor==3.7.1",
    "mypy==1.18.2",
    "objgraph==3.6.2",
    "playwright==1.55.0",
    "pre-commit>=4.3.0",
    "pytest==8.4.2",
    "pytest-aiohttp==1.1.0",
]

[tool.black]
line-length = 100

[tool.setuptools]
packages = []  # Disable package discovery
